cmake_minimum_required(VERSION 3.13)
project(Data_Structure_C__)
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(include)
add_subdirectory(Question)
add_subdirectory(test)
add_executable(Data_Structure_C__ src/main.cpp include/StackQueue/Stack.h include/StackQueue/Queue.h)
target_link_libraries(Data_Structure_C__ test_Q2)